Stabilizes tests